--- a/app/templates/auth/profile.html
+++ b/app/templates/auth/profile.html
@@ -75,7 +75,7 @@
                     <h3 class="fw-bold mb-0">Chỉnh sửa hồ sơ</h3>
                 </div>
 
-                <form action="{{ url_for('profile') }}" method="POST">
+                <form action="{{ url_for('main.profile') }}" method="POST">
                     <div class="row g-3">
                         <div class="col-md-6">
                             <label class="form-label-custom">Tên đăng nhập</label>
