--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -347,7 +347,7 @@
                             </div>
                         </div>
                         <div id="aiActionArea">
-                            <form action="{{ url_for('api_filter') }}" method="POST" id="aiActionForm" style="display: none;">
+                            <form action="{{ url_for('hotel.api_filter') }}" method="POST" id="aiActionForm" style="display: none;">
                                 <input type="hidden" name="city" id="aiInputCity">
                                 <input type="hidden" name="price_range" id="aiInputPrice">
                                 <input type="hidden" name="rating" value="4-5">
@@ -359,7 +359,7 @@
                         </div>
                     </div>
 
-                    <form action="{{ url_for('api_filter') }}" method="POST">
+                    <form action="{{ url_for('hotel.api_filter') }}" method="POST">
                         <div class="row g-2 align-items-end">
                             <div class="col-lg-3 col-md-6">
                                 <label class="input-label"><i class="fas fa-map-marker-alt"></i> Địa điểm</label>
@@ -757,7 +757,7 @@
     </div>
 
     <!-- FORM ẨN ĐỂ REDIRECT -->
-    <form id="hiddenSearchForm" action="{{ url_for('api_filter') }}" method="POST" style="display: none;">
+    <form id="hiddenSearchForm" action="{{ url_for('hotel.api_filter') }}" method="POST" style="display: none;">
         <input type="hidden" name="city" id="h_city">
         <input type="hidden" name="price_range" id="h_price">
         <input type="hidden" name="rating" value="4-5">
